Changed font to JetBrains Mono Regular

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,11 +1,14 @@
-include Scheme/koi.conf
+# ░█░█░▀█▀░▀█▀░▀█▀░█░█
+# ░█▀▄░░█░░░█░░░█░░░█░
+# ░▀░▀░▀▀▀░░▀░░░▀░░░▀░
+include Scheme/gold.conf
 
 # Fonts
-font_family									Cascadia Code
+font_family									JetBrains Mono Regular
 italic_font      							auto
 bold_font        							auto
 bold_italic_font 							auto
-font_size        							11
+font_size        							13
 
 adjust_line_height 							4
 adjust_column_width 						0
